--- a/index.html
+++ b/index.html
@@ -1,3 +1,1 @@
-<html>
-<head> <title>Web Page</title> </head><body>
-<p> This is my web page</p></body></html>
+<html><body><p>This is images page</p></body></html>
