Updated index.html in index2 branch

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<html><body><p>This is images page</p></body></html>
+<html><body><h1>This is the website built by Adithya Prathi - A front end web developer</h1></body></html>
