--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<html><body><h1>This is the website built by Adithya Prathi - An aspiring front end web developer</h1></body></html>
+<html><body><h1>Adithya Prathi - An aspiring front end web developer</h1></body></html>
